--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Landing page</title>
 </head>
 <body>
-
+    <h1>hello!</h1>
 </body>
 </html>
