--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,154 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Landing page</title>
+    <script src="{{ STATIC_URL }}js/jquery-1.11.2.min.js"></script>
+    <script src="{{ STATIC_URL }}js/jquery.validate.js"></script>
+    <script src="{{ STATIC_URL }}js/common.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/reset.css">
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
 </head>
 <body>
-    <h1>hello!</h1>
+<header>
+    <div class="container">
+        <img src="{{ STATIC_URL }}img/logotype.png" alt="Enjoy Africa Travel companies"/>
+        <button>Узнать подробнее</button>
+        <div class="clear"></div>
+    </div>
+</header>
+<div id="block_1">
+    <div class="container">
+        <p>Хотите совершить сафари-путешествие по <br/> Африке и сэкономить до 30% <br/> от стоимости тура?</p>
+    </div>
+</div>
+<div id="block_2">
+    <div class="container">
+        <h1>Поему именно мы? 4 железных аргумента:</h1>
+    </div>
+</div>
+<div id="block_3">
+    <div class="container">
+        <ul>
+            <li>
+                <p class="title one">Мы не посредники</p>
+                <p class="content">Вы приобретаете сафари напрямую у местного туроператора, минуя всех посредников, оставляющих себе до 30% от стоимости тура.</p>
+            </li>
+            <li>
+                <p class="title two">Мы говорим по-русски</p>
+                <p class="content">Мы единственный полностью "русский туроператор" в Восточной Африке</p>
+            </li>
+            <li>
+                <p class="title three">Мы гарантируем</p>
+                <p class="content">Заключение договора гарантирует строгое выполнение условий тура.</p>
+            </li>
+            <li>
+                <p class="title four">Мы делаем Ваш отдых удобнее</p>
+                <p class="content">Вы можете оплатить полную стоимость тура на месте при встрече с нашим гидом. Заранее взымается лишь организационная часть сборов в размере 100 USD с человека.</p>
+            </li>
+        </ul>
+    </div>
+</div>
+<div id="block_4">
+    <div class="container">
+        <h2>Совершите самое необычное путешествия в Вашей жизни!</h2>
+
+        <form class="ticket" action="">
+            <input type="text" name="name" placeholder="Ваше имя"/>
+            <input type="text" name="email" placeholder="Ваше E-mail"/>
+            <input type="submit" value="Оставить заявку"/>
+        </form>
+    </div>
+</div>
+<div id="block_5">
+    <div class="container">
+        <h2>Почему выбирают именно нас?</h2>
+
+        <p>Мы единственный полностью "русский туроператор" в Восточной Африке. Все наши сотрудники свободно общаются на
+            русском языке. Мы единственный туроператор в Восточной Африке, работающий исключительно с русскоговорящими
+            туристами.</p>
+
+        <p>Мы работает на рынке сафари-путешествий для русскоязычных туристов с 2009 года. Мы знаем, как сделать сафари
+            незабываемым.</p>
+
+        <p>Наша компания «Enjoy Africa Group of Companies» - это зарегистрированный в Кении и Танзании туроператор по
+            странам Восточной Африки. Мы имеем все необходимые лицензии для данной деятельности.</p>
+
+        <p>Наш гид имеет высшее образование по направлению "Специалист по языкам и культуре Восточной Африки"</p>
+    </div>
+</div>
+<div id="block_6">
+    <div class="container">
+        <h2>Сафари - это просто!</h2>
+        <div class="step">
+            <img src="{{ STATIC_URL }}img/block_6_1.png" alt=""/>
+            <p>Заполните <br/>форму</p>
+        </div>
+        <div class="step">
+            <img src="{{ STATIC_URL }}img/block_6_2.png" alt=""/>
+            <p>Получите наше предложение</p>
+        </div>
+        <div class="step">
+            <img src="{{ STATIC_URL }}img/block_6_3.png" alt=""/>
+            <p>Забронируйте тур</p>
+        </div>
+        <div class="step last">
+            <img src="{{ STATIC_URL }}img/block_6_4.png" alt=""/>
+            <p>Приготовьтесь к сафари</p>
+        </div>
+        <div class="clear"></div>
+    </div>
+</div>
+<div id="block_7">
+    <div class="container">
+        <p>Оставьте заявку прямо сейчас и получите <strong>бесплатную <br/> фотосессию</strong> из Африки в подарок!
+            <br/> <strong>Предложение ограниченно!</strong></p>
+    </div>
+</div>
+<div id="block_8">
+    <div class="container">
+        <form class="ticket" action="">
+            <input type="text" name="name" placeholder="Ваше имя"/>
+            <input type="text" name="email" placeholder="Ваше E-mail"/>
+            <input type="submit" value="Оставить заявку"/>
+        </form>
+    </div>
+</div>
+<div id="block_9">
+    <div class="container">
+        <p>93% наших клиентов советуют нас друзьям и обращаются к нам повторно!</p>
+    </div>
+</div>
+<div id="block_10">
+    <div class="container">
+        <h2>Что включено в стоимость?</h2>
+        <ul>
+            <li>Трансферы из аэропорта и назад</li>
+            <li>Трансферы и сафари по утвержденному <br/>маршруту на протяжении всего тура на <br/>комфортабельных минивенах и джипах.</li>
+            <li>Проживание в гостиницах (3-4*) в <br/>национальных парках с полным пансионом <br/>(трех разовое питание).</li>
+            <li>Сопровождение опытного русскоязычного гида.</li>
+            <li>Фотосессия из Африки.</li>
+        </ul>
+    </div>
+</div>
+<div id="block_11">
+    <div class="container">
+        <p>Мы организовали 476 сафари - туров по Восточной Африке, 1488 туристов из <br/> России, Украины и Белоруссии
+            остались довольны и получили массу <br/>незабываемых впечатлений.</p>
+    </div>
+</div>
+<div id="block_12">
+    <div class="container"></div>
+</div>
+<div id="block_13">
+    <div class="container"></div>
+</div>
+<footer>
+    <div class="container">
+        <form class="ticket" action="">
+            <input type="text" name="name" placeholder="Ваше имя"/>
+            <input type="text" name="email" placeholder="Ваше E-mail"/>
+            <input type="submit" value="Да! Я хочу на САФАРИ!"/>
+        </form>
+    </div>
+</footer>
 </body>
 </html>
