--- a/static/css/style.less
+++ b/static/css/style.less
@@ -58,7 +58,7 @@ header {
 }
 
 #block_1 {
-  background: url("../img/kilimanjaro.jpg") no-repeat;
+  background: url("../img/kilimanjaro.jpg");
   background-size: 100%;
   height: 530px;
   p {
@@ -84,7 +84,7 @@ header {
 }
 
 #block_3 {
-  background: url("../img/block_3_bg.jpg") no-repeat;
+  background: url("../img/block_3_bg.jpg");
   background-size: 100%;
   padding: 10px 0;
   ul {
@@ -162,7 +162,7 @@ header {
 }
 
 #block_6 {
-  background: url("../img/block_6_bg.jpg") no-repeat;
+  background: url("../img/block_6_bg.jpg");
   background-size: 100%;
   text-align: center;
   padding-bottom: 45px;
@@ -249,7 +249,7 @@ header {
 }
 
 #block_10 {
-  background: url("../img/block_10_bg.jpg") no-repeat;
+  background: url("../img/block_10_bg.jpg");
   background-size: 100%;
   h2{
     text-align: center;
@@ -259,13 +259,37 @@ header {
   }
   ul {
     list-style: none;
+//    background: #999;
+    width: 670px;
+    margin: 0 auto;
     li {
       color: #fff;
       font-size: 24px;
-      margin-bottom: 50px;
+//      margin-bottom: 20px;
+//      height: 120px;
       &:last-child {
-      margin-bottom: 0;
-    }
+        margin-bottom: 0;
+      }
+      .icon{
+        width: 150px;
+        height: 150px;
+        float: left;
+        text-align: center;
+        line-height: 150px;
+      }
+      .content {
+        height: 150px;
+        width: 510px;
+        display: table;
+        p {
+          line-height: 1.5em;
+          vertical-align: middle;
+          display: table-cell;
+        }
+      }
+      img {
+        vertical-align: middle;
+      }
     }
 
   }
@@ -273,10 +297,21 @@ header {
 
 #block_11 {
   background: #21a8ff;
+  padding: 10px 0;
   p {
     text-align: center;
     color: #fff;
     font-size: 24px;
+  }
+}
+
+#block_12 {
+  h3 {
+    text-align: center;
+    color: #101b3f;
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 65px;
   }
 }
 
