--- a/templates/base.html
+++ b/templates/base.html
@@ -123,11 +123,51 @@
     <div class="container">
         <h2>Что включено в стоимость?</h2>
         <ul>
-            <li>Трансферы из аэропорта и назад</li>
-            <li>Трансферы и сафари по утвержденному <br/>маршруту на протяжении всего тура на <br/>комфортабельных минивенах и джипах.</li>
-            <li>Проживание в гостиницах (3-4*) в <br/>национальных парках с полным пансионом <br/>(трех разовое питание).</li>
-            <li>Сопровождение опытного русскоязычного гида.</li>
-            <li>Фотосессия из Африки.</li>
+            <li>
+                <div class="icon">
+                    <img src="{{ STATIC_URL }}img/block_10_1.png" alt=""/>
+                </div>
+                <div class="content">
+                    <p>Трансферы из аэропорта и назад</p>
+                </div>
+                <div class="clear"></div>
+            </li>
+            <li>
+                <div class="icon">
+                    <img src="{{ STATIC_URL }}img/block_10_2.png" alt=""/>
+                </div>
+                <div class="content">
+                    <p>Трансферы и сафари по утвержденному <br/>маршруту на протяжении всего тура на <br/>комфортабельных минивенах и джипах.</p>
+                </div>
+                <div class="clear"></div>
+            </li>
+            <li>
+                <div class="icon">
+                    <img src="{{ STATIC_URL }}img/block_10_3.png" alt=""/>
+                </div>
+                <div class="content">
+                    <p>Проживание в гостиницах (3-4*) в <br/>национальных парках с полным пансионом <br/>(трех разовое питание).</p>
+                </div>
+                <div class="clear"></div>
+            </li>
+            <li>
+                <div class="icon">
+                    <img src="{{ STATIC_URL }}img/block_10_4.png" alt=""/>
+                </div>
+                <div class="content">
+                    <p>Сопровождение опытного русскоязычного гида.</p>
+                </div>
+                <div class="clear"></div>
+            </li>
+            <li>
+                <div class="icon">
+                    <img src="{{ STATIC_URL }}img/block_10_5.png" alt=""/>
+                </div>
+                <div class="content">
+                    <p>Фотосессия из Африки.</p>
+                </div>
+                <div class="clear"></div>
+            </li>
         </ul>
     </div>
 </div>
@@ -138,7 +178,9 @@
     </div>
 </div>
 <div id="block_12">
-    <div class="container"></div>
+    <div class="container">
+        <h3>Вот, что говорят о нас клиенты:</h3>
+    </div>
 </div>
 <div id="block_13">
     <div class="container"></div>
