--- a/static/css/style.less
+++ b/static/css/style.less
@@ -426,6 +426,10 @@ header {
     a.flex-next {
       background: url("../img/next.png");
     }
+    img {
+      width: 179px;
+      height: 217px;
+    }
   }
   ul {
     list-style: none;
