--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 </div>
 <div id="block_2">
     <div class="container">
-        <h1>Поему именно мы? 4 железных аргумента:</h1>
+        <h1>Почему именно мы? 4 железных аргумента:</h1>
     </div>
 </div>
 <div id="block_3">
@@ -56,7 +56,7 @@
 </div>
 <div id="block_4">
     <div class="container">
-        <h2>Совершите самое необычное путешествия в Вашей жизни!</h2>
+        <h2>Совершите самое необычное путешествие в Вашей жизни!</h2>
 
         {% include 'form.html' %}
     </div>
@@ -102,8 +102,14 @@
 </div>
 <div id="block_7">
     <div class="container">
-        <p>Оставьте заявку прямо сейчас и получите <strong>бесплатную <br/> фотосессию</strong> из Африки в подарок!
-            <br/> <strong>Предложение ограниченно!</strong></p>
+        <p>
+            Оставьте заявку <strong>прямо сейчас</strong><br/>
+            и получите одну экскурсию бесплатно на выбор:<br/>
+            <strong>"Посещение масайской деревни"</strong><br/>
+            или <br/>
+            <strong>"Прогулка на лодке по Озеру Найваша"</strong><br/>
+            <strong>Предложение ограниченно!</strong>
+        </p>
     </div>
 </div>
 <div id="block_8">
@@ -174,65 +180,47 @@
             остались довольны и получили массу <br/>незабываемых впечатлений.</p>
     </div>
 </div>
+{% if review %}
 <div id="block_12">
     <div class="container">
         <h3>Вот, что говорят о нас клиенты:</h3>
 
         <div class="slider_1">
             <ul class="slides_1">
+            {% for item in review %}
                 <li>
                     <div class="photo">
-                        <img src="{{ STATIC_URL }}slider1/photo_1.png" alt=""/>
+                        <img src="{{ item.photo.url }}" alt="{{ item.name }}"/>
                     </div>
                     <div class="content">
-                        <span class="name">Михаил</span>
-                        <span class="datetime">21 апреля 2013</span>
+                        <span class="name">{{ item.name }}</span>
+                        <span class="datetime">{{ item.created }}</span>
 
-                        <p>Все прошло просто супер! Впервые ехали в Египет с женой и не разочаровались: очень интересные
-                            экскурсии. Нам понравилось, спасибо!</p>
+                        <p>{{ item.content|striptags }}</p>
                     </div>
                     <div class="clear"></div>
                 </li>
-                <li>
-                    <div class="photo">
-                        <img src="{{ STATIC_URL }}slider1/photo_1.png" alt=""/>
-                    </div>
-                    <div class="content">
-                        <span class="name">Михаил</span>
-                        <span class="datetime">21 апреля 2013</span>
-
-                        <p>Все прошло просто супер! Впервые ехали в Египет с женой и не разочаровались: очень интересные
-                            экскурсии. Нам понравилось, спасибо!</p>
-                    </div>
-                    <div class="clear"></div>
-                </li>
+            {% endfor %}
             </ul>
         </div>
     </div>
 </div>
+{% endif %}
+{% if slider %}
 <div id="block_13">
     <div class="container">
         <div class="slider_2">
             <ul class="slides">
+            {% for item in slider %}
                 <li>
-                    <img src="{{ STATIC_URL }}slider2/slide1.jpg" alt=""/>
+                    <img src="{{ item.image.url }}" alt="{{ item.name|default:'' }}"/>
                 </li>
-                <li>
-                    <img src="{{ STATIC_URL }}slider2/slide2.jpg" alt=""/>
-                </li>
-                <li>
-                    <img src="{{ STATIC_URL }}slider2/slide3.jpg" alt=""/>
-                </li>
-                <li>
-                    <img src="{{ STATIC_URL }}slider2/slide4.jpg" alt=""/>
-                </li>
-                 <li>
-                    <img src="{{ STATIC_URL }}slider2/slide2.jpg" alt=""/>
-                </li>
+            {% endfor %}
             </ul>
         </div>
     </div>
 </div>
+{% endif %}
 <footer>
     <div class="container">
         <form class="ticket" action="" method="post">{% csrf_token %}
