fix block_& width

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1,6 +1,15 @@
+body {
+  background: #f1f1f1;
+}
+#wrapper {
+  width: 1000px;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 0 10px #333;
+     -moz-box-shadow: 0 0 10px #333;
+          box-shadow: 0 0 10px #333;
+}
 header, footer, #block_1, #block_2, #block_3, #block_4, #block_5, #block_6,
 #block_7, #block_8, #block_9, #block_10, #block_11, #block_12, #block_13 {
-  min-width: 910px;
   width: 100%;
   position: relative;
 }
@@ -61,7 +70,7 @@ header {
 #block_1 {
   background: url("../img/kilimanjaro.jpg");
   background-size: 100%;
-  height: 530px;
+  height: 435px;
   p {
     padding-top: 60px;
     font-size: 40px;
@@ -164,7 +173,6 @@ header {
 
 #block_6 {
   background: url("../img/block_6_bg.jpg");
-  background-size: 100%;
   text-align: center;
   padding-bottom: 45px;
   h2 {
@@ -251,7 +259,6 @@ header {
 
 #block_10 {
   background: url("../img/block_10_bg.jpg");
-  background-size: 100%;
   h2{
     text-align: center;
     line-height: 95px;
