--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,13 @@
+body {
+  background: #f1f1f1;
+}
+#wrapper {
+  width: 1000px;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 0 10px #333;
+  -moz-box-shadow: 0 0 10px #333;
+  box-shadow: 0 0 10px #333;
+}
 header,
 footer,
 #block_1,
@@ -13,7 +23,6 @@ footer,
 #block_11,
 #block_12,
 #block_13 {
-  min-width: 910px;
   width: 100%;
   position: relative;
 }
@@ -73,7 +82,7 @@ header button {
 #block_1 {
   background: url("../img/kilimanjaro.jpg");
   background-size: 100%;
-  height: 530px;
+  height: 435px;
 }
 #block_1 p {
   padding-top: 60px;
@@ -174,7 +183,6 @@ header button {
 }
 #block_6 {
   background: url("../img/block_6_bg.jpg");
-  background-size: 100%;
   text-align: center;
   padding-bottom: 45px;
 }
@@ -257,7 +265,6 @@ header button {
 }
 #block_10 {
   background: url("../img/block_10_bg.jpg");
-  background-size: 100%;
 }
 #block_10 h2 {
   text-align: center;
