--- a/templates/base.html
+++ b/templates/base.html
@@ -229,6 +229,7 @@
                 <input type="email" name="email" placeholder="Ваше E-mail"/>
                 <input type="submit" value="Да! Я хочу на САФАРИ!"/>
             </form>
+            <a href="" class="creator"><img src="/static/img/our-logo.png" alt=""></a>
         </div>
     </footer>
 </div>
