--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@ body {
   background: #f1f1f1;
 }
 #wrapper {
-  width: 1000px;
+  width: 1280px;
   margin: 0 auto;
   -webkit-box-shadow: 0 0 10px #333;
   -moz-box-shadow: 0 0 10px #333;
@@ -82,7 +82,7 @@ header button {
 #block_1 {
   background: url("../img/kilimanjaro.jpg");
   background-size: 100%;
-  height: 435px;
+  height: 557px;
 }
 #block_1 p {
   padding-top: 60px;
@@ -488,7 +488,8 @@ label.error {
 }
 .creator {
   position: absolute;
-  right: 0;
+  right: 10px;
+  bottom: 0;
 }
 .creator img {
   height: 40px;
