--- a/static/css/style.less
+++ b/static/css/style.less
@@ -2,7 +2,7 @@ body {
   background: #f1f1f1;
 }
 #wrapper {
-  width: 1000px;
+  width: 1280px;
   margin: 0 auto;
   -webkit-box-shadow: 0 0 10px #333;
      -moz-box-shadow: 0 0 10px #333;
@@ -70,7 +70,7 @@ header {
 #block_1 {
   background: url("../img/kilimanjaro.jpg");
   background-size: 100%;
-  height: 435px;
+  height: 557px;
   p {
     padding-top: 60px;
     font-size: 40px;
@@ -486,7 +486,8 @@ label.error {
 }
 .creator {
   position: absolute;
-  right: 0;
+  right: 10px;
+  bottom: 0;
   img {
     height: 40px;
   }
